Ulteriore step implementazione issue #9 aggiunte informazioniDebitore
